typescript/checker/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts.stderr
error: TS2703
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:7:31
  |
7 | var ResultIsBoolean1 = delete ENUM;
  |                               ^^^^

error: TS2703
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:8:31
  |
8 | var ResultIsBoolean2 = delete ENUM1;
  |                               ^^^^^

error: TS2704 {
    span: Span {
        lo: BytePos(
            221,
        ),
        hi: BytePos(
            231,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:11:31
   |
11 | var ResultIsBoolean3 = delete ENUM1["A"];
   |                               ^^^^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:12:32
   |
12 | var ResultIsBoolean4 = delete (ENUM[0] + ENUM1["B"]);
   |                                ^^^^^^^^^^^^^^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:15:31
   |
15 | var ResultIsBoolean5 = delete delete ENUM;
   |                               ^^^^^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:15:38
   |
15 | var ResultIsBoolean5 = delete delete ENUM;
   |                                      ^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:16:31
   |
16 | var ResultIsBoolean6 = delete delete delete (ENUM[0] + ENUM1["B"]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:16:38
   |
16 | var ResultIsBoolean6 = delete delete delete (ENUM[0] + ENUM1["B"]);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:16:46
   |
16 | var ResultIsBoolean6 = delete delete delete (ENUM[0] + ENUM1["B"]);
   |                                              ^^^^^^^^^^^^^^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:19:8
   |
19 | delete ENUM;
   |        ^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:20:8
   |
20 | delete ENUM1;
   |        ^^^^^

error: TS2704 {
    span: Span {
        lo: BytePos(
            493,
        ),
        hi: BytePos(
            500,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:21:8
   |
21 | delete ENUM1.B;
   |        ^^^^^^^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithEnumType.ts:22:8
   |
22 | delete ENUM, ENUM1;
   |        ^^^^

